# cleaner

./: .envrc  .gitignore  Cargo.toml  Earthfile  Makefile  README.md  devbox.json  devshell.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yaml  deploy.yaml
src/: cleaner.rs  main.rs
