[package]
name = "cleaner"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.40", features = ["derive", "unicode"] }
env_logger = "0.11.8"
fundu = "2.0.0"
log = "0.4.27"
trash = "5.0.0"

[profile.release]
lto = true
strip = true

[dev-dependencies]
filetime = "0.2.25"
tempfile = "3.20.0"
